# Understory-Forests

./: LICENSE  README.md  TRAINING_GUIDE.md  USER_GUIDE.md  download_model.md  install.sh  pyproject.toml
scripts/: inference.py  measure.py  post_segmentation_script.py  preprocessing.py  report_writer.py  tools.py  train.py  train_datasets.py
tests/: conftest.py  test_config.py  test_e2e_pipeline.py  test_gpu.py  test_paths.py  test_pipeline_integration.py  test_resources.py  test_tools.py  test_tree_registry.py
understory/: __init__.py  __main__.py
understory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
understory/config/: settings.py
understory/core/: allometry.py  comparison.py  gis_export.py  paths.py  pipeline.py  report.py  tree_registry.py
understory/gui/: main_window.py  tooltips.py
understory/gui/panels/: allometry_panel.py  batch_panel.py  flythrough.py  growth_panel.py  processing_panel.py  training_panel.py
understory/gui/viewer/: label_editor.py  point_cloud_viewer.py
understory/resources/: comparison_template.html  report_template.html
understory/resources/styles/: understory.qss  understory_dark.qss
