[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "understory"
version = "0.1.0"
description = "Forest Structural Complexity Tool — modernized as Understory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Core scientific
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.8",

    # Point cloud I/O
    "laspy>=2.5",
    "open3d>=0.18",

    # ML / Deep Learning (install torch separately, see README)
    # torch>=2.10.0+cu128 — install via: pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128
    # torch-geometric     — install via: pip install torch-geometric
    # torch-cluster, torch-scatter, torch-sparse — pip install ... -f https://data.pyg.org/whl/torch-2.10.0+cu128.html
    "torch-geometric",

    # ML utilities
    "scikit-learn>=1.4",
    "scikit-image>=0.22",
    "scikit-spatial>=7.2",
    "hdbscan>=0.8.33",
    "networkx>=3.2",

    # GUI
    "PySide6>=6.7",
    "pyvista>=0.43",
    "pyvistaqt>=0.11",

    # Config & reporting
    "pyyaml>=6.0",
    "Jinja2>=3.1",
    "Markdown>=3.6",
    "mdutils>=1.6",

    # GIS export
    "geopandas>=0.14",

    # Video export
    "imageio-ffmpeg>=0.4",

    # Misc
    "Pillow>=10.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.3",
]

[project.scripts]
understory = "understory.__main__:main"

[project.gui-scripts]
understory-gui = "understory.__main__:main"

[tool.setuptools.packages.find]
include = ["understory*"]

[tool.setuptools.package-data]
"understory.resources" = ["icons/*", "styles/*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that run the full pipeline (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 120
target-version = "py310"
